--- a/index.html
+++ b/index.html
@@ -1,13 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <script src="./scripts/main.js" defer type="module"></script>
-</head>
-<body>
+  <title>WDD330 - Weather App</title>
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+
+  <!-- BS5 icons -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
+  <script src="./scripts/index.js" defer type="module"></script>
   
+
+  <!-- My own CSS -->
+  <link rel="stylesheet" href="./css/main.css">
+
+  <!-- Fonts Google -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;600;700&display=swap" rel="stylesheet"> 
+
+</head>
+
+<body class="container-fluid px-0">
+  <div class="min-vh-100 d-flex">
+    <div class="sidebar col-2 d-flex flex-column flex-shrink-0 p-3 bg-light" style="width: 280px;">
+      <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
+        <svg class="bi pe-none me-2" width="40" height="32">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+        <h1 class="fs-4">Weather App</h1>
+      </a>
+      <hr>
+      <ul class="nav nav-pills flex-column mb-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link active" aria-current="page">
+            <i class="bi bi-house"></i>
+            Home
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <i class="bi bi-calendar3-range"></i>
+            Forecast
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <i class="bi bi-building-gear"></i>
+            Principal Cities
+          </a>
+        </li>
+        <li>
+          <a href="#" class="nav-link link-dark">
+            <i class="bi bi-cloud-sun"></i>
+            My Location
+          </a>
+        </li>
+        <!-- <li>
+          <a href="#" class="nav-link link-dark">
+            <svg class="bi pe-none me-2" width="16" height="16">
+              <use xlink:href="#people-circle"></use>
+            </svg>
+            Customers
+          </a>
+        </li> -->
+      </ul>
+    </div>
+  
+    <main class="main-test col-lg container-fluid p-0">
+      <header class="py-3 mb-3 border-bottom">
+        <div class="d-flex align-items-center justify-content-between px-5">
+          <form class="w-50 me-3" role="search">
+            <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+          </form>
+  
+          <div class="flex-shrink-0 dropdown">
+            <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
+            </a>
+            <ul class="dropdown-menu text-small shadow">
+              <li><a class="dropdown-item" href="#">New project...</a></li>
+              <li><a class="dropdown-item" href="#">Settings</a></li>
+              <li><a class="dropdown-item" href="#">Profile</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Sign out</a></li>
+            </ul>
+          </div>
+        </div>
+      </header>
+
+      <div class="h-100" id="main-cnt">
+
+            <!-- TEST CARD -->
+        <!-- <div>
+          <section class="card_main">
+            <div class="card_main_head">
+              <p>
+                <i class="bi bi-geo-alt"></i>
+                <span id="card-place">${wth.name}</span>
+              </p>
+              <p>Today <span id="card-time"></span></p>
+            </div>
+            <div class="card_main_tmp">
+              <span>
+                ${wth.main.temp}
+              </span>
+              <span>
+                ${wth.weather[0].description}
+              </span>
+            </div>
+            <div class="card_main_more">
+              <article>
+                <i class="bi bi-wind"></i>
+                <span>${wth.main.pressure}</span>
+              </article>
+              <article>
+                <i class="bi bi-droplet"></i>
+                <span>${wth.main.humidity}%</span>
+              </article>
+              <article>
+                <i class="bi bi-cloud-haze2-fill"></i>
+                <span>${wth.wind.speed}km/h</span>
+              </article>
+            </div>
+          </section>
+
+          <section class="card_tmp_detailed">
+            proximamente
+          </section>
+        </div> -->
+
+            <!-- TEST CARD -->
+
+
+
+      </div>
+  
+      <!-- BOTTOM BAR FOR SMALL SCREENS -->
+      <div class="bottombar px-3 py-2 text-bg-dark">
+        <div class="container">
+          <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+  
+            <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
+              <li>
+                <a href="#" class="nav-link text-secondary">
+                  <i class="bi bi-house"></i>
+                  Home
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-calendar3-range"></i>
+                  Forecast
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-building-gear"></i>
+                  Principal Cities
+                </a>
+              </li>
+              <li>
+                <a href="#" class="nav-link text-white">
+                  <i class="bi bi-cloud-sun"></i>
+                  My Location
+                </a>
+              </li>
+
+            </ul>
+          </div>
+        </div>
+      </div>
+    </main>
+
+  </div>
 </body>
+
 </html>
