code works well but not in firefox, styles needed

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <main class="main-cnt col-lg container-fluid p-0">
       <header class="py-3 mb-3 border-bottom">
         <div class="d-flex align-items-center justify-content-between px-5">
-          <form class="w-50 me-3" role="search">
-            <input type="search" class="form-control" placeholder="Search..." aria-label="Search">
+          <form class="w-50 me-3" role="search" id="form-search">
+            <input type="search" name="search" class="form-control" placeholder="Search..." aria-label="Search">
           </form>
   
           <div class="flex-shrink-0 dropdown">
