just need Design!!

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <header class="py-3 mb-3 border-bottom">
         <div class="d-flex align-items-center justify-content-between px-5">
           <form class="w-50 me-3" role="search" id="form-search">
-            <input type="search" name="search" class="form-control" placeholder="Search..." aria-label="Search">
+            <input type="search" name="search" class="form-control" placeholder="Search... (example: california, US)" aria-label="Search">
           </form>
   
           <div class="flex-shrink-0 dropdown">
@@ -127,22 +127,22 @@
   
             <ul class="nav col-12 col-lg-auto my-2 justify-content-evenly my-md-0 text-small">
               <li>
-                <button href="#" class="btn btn-nav nav-link text-primary home-btn" data-key="home-btn" disabled>
+                <button href="#" class="btn btn-nav border-0 nav-link text-primary home-btn" data-key="home-btn" disabled>
                   <i class="bi bi-house"></i>
                 </button>
               </li>
               <li>
-                <button href="#" class="btn btn-nav nav-link text-dark forecast-btn" data-key="forecast-btn" disabled>
+                <button href="#" class="btn btn-nav border-0 nav-link text-dark forecast-btn" data-key="forecast-btn" disabled>
                   <i class="bi bi-calendar3-range"></i>
                 </button>
               </li>
               <li>
-                <button href="#" class="btn btn-nav nav-link text-dark cities-btn" data-key="cities-btn" disabled>
+                <button href="#" class="btn btn-nav border-0 nav-link text-dark cities-btn" data-key="cities-btn" disabled>
                   <i class="bi bi-building-gear"></i>
                 </button>
               </li>
               <li>
-                <button href="#" class="btn btn-nav nav-link text-dark location-btn" data-key="location-btn" disabled>
+                <button href="#" class="btn btn-nav border-0 nav-link text-dark location-btn" data-key="location-btn" disabled>
                   <i class="bi bi-cloud-sun"></i>
                 </button>
               </li>
